--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=5000
 DB_PORT=5432
-DB_USER=admin
+DB_USER=postgres
 DB_NAME=ecommerce
 DB_CONNECTION_READ=localhost
 DB_CONNECTION_WRITE=localhost
